# tally-block-voting

./: Cargo.toml  README.md
src/: data_generator.rs  input_generator.rs  main.rs  tally.rs  voting.rs
