[package]
name = "tally-block-voting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
fake = { version = "2.8.0", features = ["derive", "uuid"] }
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
